objects/LAT_CotaMarket__c.object
<CustomObject>
    <fields>
        <fullName>InitDate__c</fullName>
        <label>InitDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product that consumes the cota</description>
        <label>Produto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Cotas New to Market</relationshipLabel>
        <relationshipName>LAT_CotaMarkets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product that consumes the cota</description>
        <label>Produto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cotas New to Market</relationshipLabel>
        <relationshipName>CotaMarkets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <description>End date of the cota period</description>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <description>Start date of the cota period</description>
        <label>Data Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>totalConsumido__c</fullName>
        <label>Total Consumido</label>
        <summarizedField>LAT_DetalheCotaMarket__c.consumo__c</summarizedField>
        <summaryForeignKey>LAT_DetalheCotaMarket__c.cotaMarket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalCota__c</fullName>
        <description>Maximum number of consumed products by the Cota</description>
        <label>Total Cota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalDistribuido__c</fullName>
        <label>Total Distribuido</label>
        <summarizedField>LAT_DetalheCotaMarket__c.cota__c</summarizedField>
        <summaryForeignKey>LAT_DetalheCotaMarket__c.cotaMarket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cota New to Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>totalConsumido__c</columns>
        <columns>totalCota__c</columns>
        <columns>totalDistribuido__c</columns>
        <columns>startDate__c</columns>
        <columns>endDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotas New to Market</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>COTA_VR01_ValidateSKU</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED(SKU__c),ISCHANGED(LAT_Product__c)) &amp;&amp;(TODAY() &gt;= startDate__c) &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorMessage>Para períodos já iniciados o Produto não pode ser alterado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_VR02_ValidateDates</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || (ISCHANGED(startDate__c) || ISCHANGED(endDate__c))) &amp;&amp;
Today() &gt;  startDate__c &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorMessage>A &quot;Data Inicio&quot; e &quot;Data Fim&quot; deve ser maior ou igual a data do dia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_VR03_ValidateStart</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(startDate__c) &amp;&amp; Today() &gt;= PRIORVALUE(startDate__c)) &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>startDate__c</errorDisplayField>
        <errorMessage>Para períodos já iniciados a Data Início não pode ser alterada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_VR04_ValidateEnd</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(endDate__c) &amp;&amp; Today() &gt;= PRIORVALUE(endDate__c)) &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>endDate__c</errorDisplayField>
        <errorMessage>Para períodos finalizados a Data Fim não pode ser alterada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_VR05_ValidateTotals</fullName>
        <active>true</active>
        <errorConditionFormula>totalDistribuido__c &gt;  totalCota__c &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>totalCota__c</errorDisplayField>
        <errorMessage>O Total Cota deve ser maior ou igual que o Total Distribuído</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_VR06_ValidateStartEnd</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || (ISCHANGED(startDate__c) || ISCHANGED(endDate__c)))
&amp;&amp;
startDate__c &gt; endDate__c &amp;&amp; NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorMessage>A Data Fim deve ser maior ou igual que a Data Inicio</errorMessage>
    </validationRules>
</CustomObject>